# gkom

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.yaml
assets/: coffee2go.mtl  coffeeMaker.mtl  espresso.mtl  ordinaryCoffee.mtl
includes/include/glad/: glad.h
includes/src/: glad.c
shaders/: blinn-phong.fs  blinn-phong.vs  instanced.fs  instanced.vs  shader.vs  text.fs  text.vs
src/: bullet_buffer.h  camera.h  defines.h  draw.h  drawBuffer.h  game.cpp  game.h  globals.cpp  globals.h  input.cpp  input.h  main.cpp  settings.h  state.h  utils.h
src/entities/: bullet.cpp  bullet.h  emiter.cpp  emiter.h  emmiter.cpp  emmiter.h  enemy.h  entity.h  player.cpp  player.h
src/hitbox/: hitbox.h
src/mesh/: mesh.h  mesh_loader.h
src/shaders/: blinn_phong.h  shader_params.h  shader_s.h  utils.cpp  utils.h
src/shapes/: shape.h  shape_factory.h
src/text/: text.h  text_data.h
src/textures/: texture.h  texture_factory.h
